--- a/bitcoin-suisse-tx.csproj
+++ b/bitcoin-suisse-tx.csproj
@@ -10,6 +10,7 @@
 
   <ItemGroup>
     <PackageReference Include="Hexarc.Borsh" Version="2.1.0" />
+    <PackageReference Include="NSec.Cryptography" Version="24.4.0" />
   </ItemGroup>
 
 </Project>
